--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        
+        {
+            "name": "Telegraph",
+            "type": "ev3devBrowser",
+            "request": "launch",
+            "program": "/home/robot/ev3dev-telegraph-net/telegraph.py"
+        },
         {
             "name": "Printer",
             "type": "ev3devBrowser",
